# kopyfs

./: Cargo.toml  Dockerfile  README.md  skaffold.yaml
docs/: developer-guide.md
k8s/: deployment.yaml  rbac.yaml  serviceaccounts.yaml
src/: lib.rs
