[package]
name = "kopyfs"
version = "0.1.0"
authors = ["Chris Jones <chris@cjones.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
k8s-openapi = { version = "0.7.1", default-features = false, features = ["v1_15"] }
# This should be 0.33.0 for non-Windows:
kube = "0.33.0"
tokio = { version = "0.2", features = ["full"] }
